--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "884.-Uncommon-Words-from-Two-Sentences"]
-	path = 884.-Uncommon-Words-from-Two-Sentences
-	url = https://github.com/madiv9820/884.-Uncommon-Words-from-Two-Sentences.git
+[submodule "884_Uncommon_Words_from_Two_Sentences"]
+	path = 884_Uncommon_Words_from_Two_Sentences
+	url = https://github.com/madiv9820/884_Uncommon_Words_from_Two_Sentences.git
