--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Daily Challenge/179. Largest Number"]
 	path = Daily Challenge/179. Largest Number
 	url = https://github.com/madiv9820/179_Largest_Number.git
+[submodule "Daily Challenge/241. Different Ways to Add Parentheses"]
+	path = Daily Challenge/241. Different Ways to Add Parentheses
+	url =  https://github.com/madiv9820/241_Different_Ways_to_Add_Parentheses.git
